[package]
name = "rfp-ffi"
version = "0.1.0"
edition = "2021"

[workspace]

members = [
  "generic_rustc_format_parser",
]

[dependencies]
libc = "0.2"
generic_rustc_format_parser = { path = "generic_rustc_format_parser" }

[lib]
crate_type = ["staticlib", "rlib"]

[[bin]]
name = "rfp-test"
path = "src/bin.rs"
